Configure Firebase Hosting deployment. Add dot to copyright section

--- a/public/index.html
+++ b/public/index.html
@@ -597,7 +597,7 @@
                         <div class="author">
                             <p>
                                 Created by
-                                <strong>Justin Salcedo</strong> <br />
+                                <strong>Justin Salcedo</strong>. <br />
                                 <a href="graphics.txt">Graphics credits</a> go
                                 to their respective authors. © 2024. All rights
                                 reserved. <br />
