Link to WBG310 Final Project site

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -363,6 +363,14 @@
                                 </p>
                                 <ul>
                                     <li>
+                                        WBG310 Interactive Web Page Scripting
+                                        with Lab
+                                        <a
+                                            href="academic-portfolio/wbg310-final-project/"
+                                            >(site)</a
+                                        >
+                                    </li>
+                                    <li>
                                         CIS355A Business Application Programming
                                         with Lab
                                         <a
